--- a/SEIBÜBSCH1/src/application/Gesamtkosten.fxml
+++ b/SEIBÜBSCH1/src/application/Gesamtkosten.fxml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.TextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.erstesFensterController">
    <children>
       <ScrollPane prefHeight="336.0" prefWidth="376.0">
          <content>
             <ListView prefHeight="314.0" prefWidth="354.0" />
          </content>
       </ScrollPane>
-      <Button layoutX="25.0" layoutY="355.0" mnemonicParsing="false" text="zurück">
+      <Button fx:id="closeButton" layoutX="25.0" layoutY="355.0" mnemonicParsing="false" onAction="#closeButtonAction" text="zurück">
          <font>
             <Font name="Verdana" size="15.0" />
          </font>
@@ -26,12 +26,12 @@
             <Font name="Verdana Bold" size="16.0" />
          </font>
       </Text>
-      <TextField layoutX="389.0" layoutY="92.0" prefHeight="31.0" prefWidth="127.0" />
       <Text layoutX="532.0" layoutY="117.0" strokeType="OUTSIDE" strokeWidth="0.0" text="€">
          <font>
             <Font name="Verdana" size="25.0" />
          </font>
       </Text>
       <Button layoutX="259.0" layoutY="354.0" mnemonicParsing="false" text="verwerfen" />
+      <TextField layoutX="383.0" layoutY="92.0" prefHeight="31.0" prefWidth="135.0" />
    </children>
 </AnchorPane>
