--- a/SEIBÜBSCH1/src/application/Neue_Buchung1.fxml
+++ b/SEIBÜBSCH1/src/application/Neue_Buchung1.fxml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.TextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.erstesFensterController">
    <children>
       <Text layoutX="34.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Neue Buchung">
          <font>
@@ -16,8 +16,8 @@
          </font>
       </Text>
       <ChoiceBox layoutX="219.0" layoutY="90.0" prefWidth="150.0" />
-      <Button layoutX="34.0" layoutY="345.0" mnemonicParsing="false" text="zurück" />
-      <Button layoutX="479.0" layoutY="345.0" mnemonicParsing="false" text="weiter" />
+      <Button fx:id="closeButton" layoutX="34.0" layoutY="345.0" mnemonicParsing="false" onAction="#closeButtonAction" text="zurück" />
+      <Button layoutX="479.0" layoutY="345.0" mnemonicParsing="false" onAction="#BuchungLieferant" text="weiter" />
       <Text layoutX="34.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ort:">
          <font>
             <Font name="Verdana Bold" size="14.0" />
