--- a/SEIBÜBSCH1/src/application/Artikel_bearbeiten.fxml
+++ b/SEIBÜBSCH1/src/application/Artikel_bearbeiten.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.TextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -27,12 +27,12 @@
             <Font name="Verdana Bold" size="14.0" />
          </font>
       </Text>
-      <TextField layoutX="281.0" layoutY="164.0" />
       <Text layoutX="34.0" layoutY="254.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Preis:">
          <font>
             <Font name="Verdana Bold" size="14.0" />
          </font>
       </Text>
-      <TextField layoutX="281.0" layoutY="224.0" />
+      <TextField layoutX="281.0" layoutY="164.0" />
+      <TextField layoutX="281.0" layoutY="233.0" />
    </children>
 </AnchorPane>
