--- a/SEIBÜBSCH1/src/application/Neue_Buchung_Fuhrpark.fxml
+++ b/SEIBÜBSCH1/src/application/Neue_Buchung_Fuhrpark.fxml
@@ -5,15 +5,15 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.erstesFensterController">
    <children>
       <Text layoutX="34.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Neue Buchung:          Fuhrpark">
          <font>
             <Font name="Verdana Bold" size="18.0" />
          </font>
       </Text>
-      <Button layoutX="34.0" layoutY="345.0" mnemonicParsing="false" text="zurück" />
-      <Button layoutX="479.0" layoutY="345.0" mnemonicParsing="false" text="weiter" />
+      <Button fx:id="closeButton" layoutX="34.0" layoutY="345.0" mnemonicParsing="false" onAction="#closeButtonAction" text="zurück" />
+      <Button layoutX="479.0" layoutY="345.0" mnemonicParsing="false" onAction="#Gesamtkosten" text="weiter" />
       <Text layoutX="34.0" layoutY="94.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Auto:">
          <font>
             <Font name="Verdana Bold" size="14.0" />
