--- a/SEIBÜBSCH1/src/application/Neuer_Artikel.fxml
+++ b/SEIBÜBSCH1/src/application/Neuer_Artikel.fxml
@@ -7,14 +7,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.erstesFensterController">
    <children>
       <Text layoutX="34.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Neuer Artikel">
          <font>
             <Font name="Verdana Bold" size="18.0" />
          </font>
       </Text>
-      <Button layoutX="34.0" layoutY="345.0" mnemonicParsing="false" text="zurück" />
+      <Button fx:id="closeButton" layoutX="34.0" layoutY="345.0" mnemonicParsing="false" onAction="#closeButtonAction" text="zurück" />
       <Button layoutX="467.0" layoutY="345.0" mnemonicParsing="false" text="bestätigen" />
       <Text layoutX="34.0" layoutY="124.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Art des Artikels:">
          <font>
