--- a/SEIBÜBSCH1/src/application/Neuer_Kunde.fxml
+++ b/SEIBÜBSCH1/src/application/Neuer_Kunde.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.TextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.TextField?>
@@ -10,23 +9,23 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Text layoutX="34.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Neuer Kunde">
+      <Text layoutX="34.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Neuer Kunde ">
          <font>
             <Font name="Verdana Bold" size="18.0" />
          </font>
       </Text>
-      <TextField />
-      <TextField fx:id="plz" floatText="PLZ" layoutX="32.0" layoutY="176.0" />
-      <TextField fx:id="ort" floatText="Ort" layoutX="309.0" layoutY="177.0" />
-      <TextField fx:id="bankinstitut" floatText="Bankinstitut" layoutX="32.0" layoutY="227.0" />
-      <TextField fx:id="iban" floatText="IBAN" layoutX="309.0" layoutY="228.0" />
-      <TextField fx:id="telefonnummer" floatText="Telefonnummer" layoutX="34.0" layoutY="281.0" />
-      <TextField fx:id="firma" floatText="Firma" layoutX="309.0" layoutY="280.0" />
       <ChoiceBox layoutX="317.0" layoutY="27.0" prefWidth="150.0" />
-      <Button fx:id="zurück" layoutX="34.0" layoutY="345.0" mnemonicParsing="false" text="zurück" />
-      <Button fx:id="speichern" layoutX="275.0" layoutY="345.0" mnemonicParsing="false" text="speichern" />
-      <Button fx:id="speichernbuchen" layoutX="393.0" layoutY="345.0" mnemonicParsing="false" text="speichern + neue Buchung" />
-      <TextField layoutX="34.0" layoutY="78.0" />
-      <TextField layoutX="32.0" layoutY="83.0" />
+      <Button layoutX="34.0" layoutY="345.0" mnemonicParsing="false" text="zurück" />
+      <Button layoutX="474.0" layoutY="345.0" mnemonicParsing="false" text="bestätigen" />
+      <TextField layoutX="34.0" layoutY="89.0" promptText="Vorname" />
+      <TextField layoutX="317.0" layoutY="89.0" promptText="Nachname" />
+      <TextField layoutX="34.0" layoutY="143.0" promptText="Straße" />
+      <TextField layoutX="317.0" layoutY="143.0" promptText="Hausnummer" />
+      <TextField layoutX="34.0" layoutY="200.0" promptText="PLZ" />
+      <TextField layoutX="317.0" layoutY="200.0" promptText="Ort" />
+      <TextField layoutX="33.0" layoutY="254.0" promptText="Bankinstitut" />
+      <TextField layoutX="317.0" layoutY="253.0" promptText="IBAN" />
+      <TextField layoutX="34.0" layoutY="303.0" promptText="Telefonnummer" />
+      <TextField layoutX="317.0" layoutY="303.0" promptText="Firma" />
    </children>
 </AnchorPane>
