--- a/SEIBÜBSCH1/src/application/Neuer_Lieferant.fxml
+++ b/SEIBÜBSCH1/src/application/Neuer_Lieferant.fxml
@@ -1,30 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.TextField?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.erstesFensterController">
    <children>
       <Text layoutX="34.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Neuer Lieferant">
          <font>
             <Font name="Verdana Bold" size="18.0" />
          </font>
       </Text>
-      <TextField floatText="Vorname" layoutX="32.0" layoutY="73.0" />
-      <TextField floatText="Nachname" layoutX="309.0" layoutY="73.0" />
-      <TextField floatText="Straße" layoutX="32.0" layoutY="125.0" />
-      <TextField floatText="Hausnummer" layoutX="309.0" layoutY="126.0" />
-      <TextField floatText="PLZ" layoutX="32.0" layoutY="176.0" />
-      <TextField floatText="Ort" layoutX="309.0" layoutY="177.0" />
-      <TextField floatText="Bankinstitut" layoutX="32.0" layoutY="227.0" />
-      <TextField floatText="IBAN" layoutX="309.0" layoutY="228.0" />
-      <TextField floatText="Preis" layoutX="34.0" layoutY="281.0" />
-      <TextField floatText="Firma" layoutX="309.0" layoutY="280.0" />
-      <Button layoutX="34.0" layoutY="345.0" mnemonicParsing="false" text="zurück" />
+      <Button fx:id="closeButton" layoutX="34.0" layoutY="345.0" mnemonicParsing="false" onAction="#closeButtonAction" text="zurück" />
       <Button layoutX="467.0" layoutY="345.0" mnemonicParsing="false" text="bestätigen" />
+      <TextField layoutX="34.0" layoutY="80.0" promptText="Vorname" />
+      <TextField layoutX="370.0" layoutY="80.0" promptText="Nachname" />
+      <TextField layoutX="34.0" layoutY="137.0" promptText="Straße" />
+      <TextField layoutX="370.0" layoutY="137.0" promptText="Hausnummer" />
+      <TextField layoutX="34.0" layoutY="197.0" promptText="PLZ" />
+      <TextField layoutX="370.0" layoutY="197.0" promptText="Ort" />
+      <TextField layoutX="34.0" layoutY="253.0" promptText="Bankinstitut" />
+      <TextField layoutX="370.0" layoutY="253.0" promptText="IBAN" />
+      <TextField layoutX="34.0" layoutY="302.0" promptText="Preis" />
+      <TextField layoutX="374.0" layoutY="302.0" promptText="Firma" />
    </children>
 </AnchorPane>
