--- a/SEIBÜBSCH1/src/application/Neues_Fahrzeug.fxml
+++ b/SEIBÜBSCH1/src/application/Neues_Fahrzeug.fxml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.TextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.erstesFensterController">
    <children>
       <Text layoutX="34.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Neues Fahrzeug">
          <font>
             <Font name="Verdana Bold" size="18.0" />
          </font>
       </Text>
-      <Button layoutX="34.0" layoutY="345.0" mnemonicParsing="false" text="zurück" />
+      <Button fx:id="closeButton" layoutX="34.0" layoutY="345.0" mnemonicParsing="false" onAction="#closeButtonAction" text="zurück" />
       <Button layoutX="467.0" layoutY="345.0" mnemonicParsing="false" text="bestätigen" />
       <Text layoutX="34.0" layoutY="124.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Art des Fahrzeuges:">
          <font>
@@ -28,12 +27,12 @@
             <Font name="Verdana Bold" size="14.0" />
          </font>
       </Text>
-      <TextField layoutX="281.0" layoutY="164.0" />
       <Text layoutX="34.0" layoutY="254.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Preis:">
          <font>
             <Font name="Verdana Bold" size="14.0" />
          </font>
       </Text>
-      <TextField layoutX="281.0" layoutY="224.0" />
+      <TextField layoutX="281.0" layoutY="164.0" />
+      <TextField layoutX="281.0" layoutY="233.0" />
    </children>
 </AnchorPane>
